<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center"
              android:orientation="vertical"
              android:padding="@dimen/main_padding">

    <TextView
        android:id="@+id/city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:textSize="@dimen/title_size"
        android:textStyle="bold"
        tools:text="Minsk"/>

    <ImageView
        android:id="@+id/weather_icon"
        android:layout_width="@dimen/weather_icon_size"
        android:layout_height="@dimen/weather_icon_size"
        android:layout_gravity="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/description_margin"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/temp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/temperature"
                android:textColor="@android:color/black"
                android:textSize="@dimen/description_text_size"/>

            <android.support.v4.widget.Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/space_between_desc"/>

            <TextView
                android:id="@+id/min_temp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/min"
                android:textColor="@android:color/black"
                android:textSize="@dimen/description_text_size"/>

            <android.support.v4.widget.Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/space_between_desc"/>

            <TextView
                android:id="@+id/max_temp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/max"
                android:textColor="@android:color/black"
                android:textSize="@dimen/description_text_size"/>

        </LinearLayout>

        <android.support.v4.widget.Space
            android:layout_width="@dimen/space_between_desc"
            android:layout_height="match_parent"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/pressure"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pressure"
                android:textColor="@android:color/black"
                android:textSize="@dimen/description_text_size"/>

            <android.support.v4.widget.Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/space_between_desc"/>

            <TextView
                android:id="@+id/humidity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/humidity"
                android:textColor="@android:color/black"
                android:textSize="@dimen/description_text_size"/>

            <android.support.v4.widget.Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/space_between_desc"/>

            <TextView
                android:id="@+id/wind"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wind"
                android:textColor="@android:color/black"
                android:textSize="@dimen/description_text_size"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>